# magic-track

./: .gitignore  CMakeLists.txt  README.md
Resources/: phrases.v1.json
Source/: MacroTypes.h  MagicTrackAudioProcessor.cpp  MagicTrackAudioProcessor.h  MagicTrackEditor.cpp  MagicTrackEditor.h  TextCommandParser.cpp  TextCommandParser.h
Tests/: ParserCli.cpp
sidecar/: magictrack_sidecar.py
sidecar/mt_sidecar/: heuristics.py  heuristics_rules.json  rules_validation.py  schema.py  server.py  service.py
sidecar/mt_sidecar/providers/: ollama_provider.py  openai_provider.py
sidecar/tests/: test_rules_validation.py  test_service.py
